# HOD

./: .gitignore  .travis.yml  CHANGELOG.md  HOD.cabal  LICENSE  README.md
data/: pima.csv
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.5/: HOD-0.1.0.0-inplace.conf  package.cache
src/HOD/: Random.hs
src/HOD/CSV/: DataFrame.hs
src/HOD/Ensemble/: IForest.hs
src/HOD/ensemble/: IForest.hs
test/: pima.csv  readCSV.hs  testIForest  testIForest.hs  testRandom.hs
