cabal-version:       >=1.10
name:                   HOD
version:                0.1.0.0
-- synopsis:    
description:            Haksell outlier detection library
-- bug-reports: 
license:                MIT
license-file:           LICENSE
author:                 Kaushal Kishore
maintainer:             kshr4kshl@gmail.com
copyright:              (c) 2020 Kaushal Kishore
-- category:            
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
    hs-source-dirs:     src
    exposed-modules:    HOD.Ensemble.IForest
                    ,   HOD.CSV.DataFrame
    other-modules:
    build-depends:      base
                    ,   csv
                    ,   Unique
                    ,   parsec
    ghc-options:        -Wall


executable pima
    hs-source-dirs:     example/pima
    main-is:            pima.hs
    build-depends:      base
                    ,   HOD
    default-language:   Haskell2010
    ghc-options:        -Wall
